--- a/index.html
+++ b/index.html
@@ -42,15 +42,12 @@
 
                     <!-- image / img -->
                     <img src="https://m.media-amazon.com/images/M/MV5BMTUxNTQyOTA2N15BMl5BanBnXkFtZTgwNTQ2MzkxMDI@._V1_.jpg" alt="Madagascar" title="Madagascar" />
-                    img
-                    src -> source
-                    alt -> alternative text
-                    title -> tooltip value
+                  
 
                     <!-- video -->
                     <video width="400" height="400" controls autoplay muted loop preload="none">
-                        <source src="https://www.imdb.com/video/vi1602270745/?playlistId=tt0351283&ref_=tt_pr_ov_vi" type="video mp4"> <!-- 1st try -->
-                        <source src="https://www.imdb.com/video/vi1602270745/?playlistId=tt0351283&ref_=tt_pr_ov_vi" type="video mp4"> <!-- if failed, 2nd try-->
+                        <source src="https://youtu.be/q3lX2p_Uy9I?si=0dpDA51x7eEi5evi" type="video mp4"> <!-- 1st try -->
+                        <source src="https://youtu.be/q3lX2p_Uy9I?si=0dpDA51x7eEi5evi" type="video mp4"> <!-- if failed, 2nd try-->
                         Your browser does not support the video tag.<!-- if all the tries fail-->
                     </video>
 
